# pj-mcap-server

./: .dockerignore  .gitignore  .gitmodules  2026-05-28-pj-cloud-client-cpp.md  2026-05-28-pj-cloud-connector-design.md  2026-05-28-pj-cloud-integration.md  2026-05-28-pj-cloud-server-v1.md  2026-06-03-pj-cloud-pj4-plugin.md  2026-06-03-unified-cloud-connector-plan.md  2026-06-04-two-endpoints-approach.md  2026-06-05-dexory-m1-closure-report.md  2026-06-05-dexory-m1-report.md  2026-06-05-m1-demo-runbook.md  2026-06-06-full-plan-audit.md  2026-06-09-toolbox-parser-delegation-walkthrough.md  2026-06-09-toolbox-parser-ingest-plan.md  2026-06-12-pj4-fork-submodule-vendoring-design.md  2026-06-12-pj4-fork-submodule-vendoring-plan.md  CLAUDE.md  Makefile  README.md  _render_proposal.py  build.sh  explanation.md  pj-cloud-connector-overview.html  run.sh
PJ4/: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  PJ4_PLAN.md  build.sh  conanfile.txt  review.md  run.sh
PJ4/.github/workflows/: linux-ci.yml  pre-commit.yml  windows-ci.yml
PJ4/.pre-commit-scripts/: README.md  check-forbidden-patterns.py
PJ4/docs/: README.md
PJ4/docs/research/: rerun_notes.md
PJ4/pj-official-plugins/: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  PLUGIN_DEVELOPMENT.md  PORTING_PLAN.md  README.md  build.sh  conanfile.py
PJ4/pj-official-plugins/data_load_csv/: CMakeLists.txt  conanfile.py  csv_dialog.cpp  csv_dialog.hpp  csv_parser.cpp  csv_parser.hpp  csv_source.cpp  manifest.json  timestamp_parsing.cpp  timestamp_parsing.hpp
PJ4/pj-official-plugins/data_load_lerobot/: CMakeLists.txt  README.md  TESTING.md  conanfile.py  dataset_model.cpp  dataset_model.hpp  dataset_shards_v3.cpp  dataset_shards_v3.hpp  dialog_lerobot.ui  flatten_plan.cpp  flatten_plan.hpp  lerobot_dialog.hpp  lerobot_plugin.cpp  lerobot_video_window.cpp  lerobot_video_window.hpp  manifest.json
PJ4/pj-official-plugins/data_load_mcap/: CMakeLists.txt  README.md  conanfile.py  dialog_mcap.ui  manifest.json  mcap_dialog.hpp  mcap_helpers.hpp  mcap_source.cpp
PJ4/pj-official-plugins/data_load_mp4/: CMakeLists.txt  conanfile.py  manifest.json  mp4_iso8601.hpp  mp4_source.cpp
PJ4/pj-official-plugins/data_load_parquet/: CMakeLists.txt  conanfile.py  manifest.json  parquet_dialog.hpp  parquet_helpers.hpp  parquet_source.cpp
PJ4/pj-official-plugins/data_load_ulog/: CMakeLists.txt  conanfile.py  manifest.json  ulog_params_dialog.cpp  ulog_params_dialog.hpp  ulog_source.cpp
PJ4/pj-official-plugins/data_stream_dummy/: CMakeLists.txt  conanfile.py  dummy_stream.cpp  manifest.json
PJ4/pj-official-plugins/data_stream_foxglove_bridge/: CMakeLists.txt  README.md  conanfile.py  foxglove_client.ui  foxglove_dialog.hpp  foxglove_protocol.hpp  foxglove_source.cpp  manifest.json
PJ4/pj-official-plugins/data_stream_mqtt/: CMakeLists.txt  conanfile.py  manifest.json  mqtt_dialog.hpp  mqtt_source.cpp
PJ4/pj-official-plugins/data_stream_pj_bridge/: CMakeLists.txt  conanfile.py  manifest.json  pj_bridge_dialog.hpp  pj_bridge_protocol.cpp  pj_bridge_protocol.hpp  pj_bridge_source.cpp  websocket_client.ui
PJ4/pj-official-plugins/data_stream_ros2/: CMakeLists.txt  README.md  conanfile.py  manifest.json  release.sh
PJ4/pj-official-plugins/data_stream_udp/: CMakeLists.txt  conanfile.py  datastream_udp.ui  manifest.json  udp_dialog.hpp  udp_source.cpp
PJ4/pj-official-plugins/data_stream_webrtc/: CMakeLists.txt  PROTOCOL.md  conanfile.py  datastream_webrtc.ui  manifest.json  video_emit.cpp  video_emit.hpp  webrtc_dialog.cpp  webrtc_dialog.hpp  webrtc_receiver.cpp  webrtc_receiver.hpp  webrtc_signaling.cpp  webrtc_signaling.hpp  webrtc_source.cpp
PJ4/pj-official-plugins/data_stream_zmq/: CMakeLists.txt  conanfile.py  datastream_zmq.ui  manifest.json  zmq_dialog.hpp  zmq_source.cpp
PJ4/pj-official-plugins/parser_data_tamer/: CMakeLists.txt  conanfile.py  data_tamer_parser.cpp  manifest.json
PJ4/pj-official-plugins/parser_json/: CMakeLists.txt  conanfile.py  json_parser.cpp  json_parser_dialog.hpp  json_parser_options.ui  manifest.json
PJ4/pj-official-plugins/parser_protobuf/: CMakeLists.txt  README.md  conanfile.py  foxglove_object_codecs.cpp  foxglove_object_codecs.hpp  foxglove_pointcloud_codec.cpp  foxglove_pointcloud_codec.hpp  manifest.json  protobuf_parser.cpp  protobuf_parser_dialog.hpp  protobuf_parser_options.ui
PJ4/pj-official-plugins/parser_ros/: CMakeLists.txt  MARKER_NOTES.md  README.md  YOLO_NOTES.md  conanfile.py  manifest.json  ros_builtin_object_handlers.cpp  ros_marker_handlers.cpp  ros_parser.cpp  ros_parser_dialog.hpp  ros_parser_internal.hpp  ros_parser_options.ui  ros_parser_plugin.cpp  ros_specializations.cpp  ros_yolo_handlers.cpp
PJ4/pj-official-plugins/scripts/: README.md  bump_core_version.py  ensure_core.sh  publish_badges.sh  release_tools.py  submit_to_registry.py  write_badge_json.py
PJ4/pj-official-plugins/toolbox_colormap/: CMakeLists.txt  colormap_dialog.ui  colormap_plugin.cpp  conanfile.py  manifest.json
PJ4/pj-official-plugins/toolbox_dexory_cloud/: CMakeLists.txt  conanfile.py
PJ4/pj-official-plugins/toolbox_fft/: CMakeLists.txt  conanfile.py  fft_dialog.ui  fft_plugin.cpp  manifest.json
PJ4/pj-official-plugins/toolbox_mosaico/: .gitignore  CMakeLists.txt  conanfile.py  manifest.json
PJ4/pj_app/: .gitignore  CLAUDE.md  CMakeLists.txt
PJ4/pj_datastore/: CLAUDE.md  CMakeLists.txt
PJ4/pj_dialog_host/: CLAUDE.md  CMakeLists.txt
PJ4/pj_marketplace/: CMakeLists.txt  README.md  main.cpp
PJ4/pj_plotting/: CLAUDE.md  CMakeLists.txt
PJ4/pj_runtime/: CLAUDE.md  CMakeLists.txt
PJ4/pj_scene2D/: CLAUDE.md
PJ4/pj_scene3D/: CLAUDE.md
PJ4/pj_scene_common/: CLAUDE.md  CMakeLists.txt
PJ4/pj_widgets/: CLAUDE.md  CMakeLists.txt
PJ4/plotjuggler_sdk/: CMakeLists.txt  conanfile.py
PJ4/raster_helper/: CMakeLists.txt  raster_helper_main.cpp
PJ4/raster_ipc/: RasterIpcProtocol.h
PJ4/resources/: resources.qrc  stylesheet_dark.qss  stylesheet_light.qss  visual_guidelines.md
PJ4/scripts/: ros2_stamped_pub.py  ros2_test_pub.py
(+1013 files in other folders)
